add java implementation for cm
